# cse576_sp20_hw2

./: CMakeLists.txt  README.md  clean.sh  compile.sh
src/: filter_image.cpp  image.h  resize_image.cpp  utils.h
src/test/: test1.cpp
